--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
     <div class="container">
         <h1>🎰 Raspadinha Online 🎰</h1>
         <div class="game-info">
-            <p>Clique nos blocos para raspar e descobrir os valores!</p>
+            <p>Arraste o mouse ou o dedo para raspar e descobrir os valores!</p>
             <p>Ganhe alinhando 3 valores iguais na horizontal, vertical ou diagonal!</p>
         </div>
         
         <div class="scratch-card">
             <div class="grid" id="grid">
                 <div class="block" data-index="0">
-                    <div class="cover">?</div>
+                    <canvas class="scratch-canvas"></canvas>
                     <div class="value" id="value-0"></div>
                 </div>
                 <div class="block" data-index="1">
-                    <div class="cover">?</div>
+                    <canvas class="scratch-canvas"></canvas>
                     <div class="value" id="value-1"></div>
                 </div>
                 <div class="block" data-index="2">
-                    <div class="cover">?</div>
+                    <canvas class="scratch-canvas"></canvas>
                     <div class="value" id="value-2"></div>
                 </div>
                 <div class="block" data-index="3">
-                    <div class="cover">?</div>
+                    <canvas class="scratch-canvas"></canvas>
                     <div class="value" id="value-3"></div>
                 </div>
                 <div class="block" data-index="4">
-                    <div class="cover">?</div>
+                    <canvas class="scratch-canvas"></canvas>
                     <div class="value" id="value-4"></div>
                 </div>
                 <div class="block" data-index="5">
-                    <div class="cover">?</div>
+                    <canvas class="scratch-canvas"></canvas>
                     <div class="value" id="value-5"></div>
                 </div>
                 <div class="block" data-index="6">
-                    <div class="cover">?</div>
+                    <canvas class="scratch-canvas"></canvas>
                     <div class="value" id="value-6"></div>
                 </div>
                 <div class="block" data-index="7">
-                    <div class="cover">?</div>
+                    <canvas class="scratch-canvas"></canvas>
                     <div class="value" id="value-7"></div>
                 </div>
                 <div class="block" data-index="8">
-                    <div class="cover">?</div>
+                    <canvas class="scratch-canvas"></canvas>
                     <div class="value" id="value-8"></div>
                 </div>
             </div>
