--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="game-info">
                 <div class="info-card">
                     <i class="fas fa-trophy"></i>
-                    <span>Encontre 3 símbolos iguais alinhados para ganhar!</span>
+                    <span>Encontre 3 valores iguais alinhados para ganhar!</span>
                 </div>
                 <div class="attempts-counter">
                     <span>Tentativa: <span id="attempt-number">1</span></span>
@@ -42,31 +42,31 @@
                     <canvas id="scratchCanvas" width="400" height="300"></canvas>
                     <div class="symbols-grid" id="symbolsGrid">
                         <div class="symbol-cell" data-row="0" data-col="0">
-                            <span class="symbol" id="symbol-0-0">💎</span>
+                            <span class="symbol" id="symbol-0-0">R$ 500,00</span>
                         </div>
                         <div class="symbol-cell" data-row="0" data-col="1">
-                            <span class="symbol" id="symbol-0-1">🍀</span>
+                            <span class="symbol" id="symbol-0-1">R$ 300,00</span>
                         </div>
                         <div class="symbol-cell" data-row="0" data-col="2">
-                            <span class="symbol" id="symbol-0-2">⭐</span>
+                            <span class="symbol" id="symbol-0-2">R$ 200,00</span>
                         </div>
                         <div class="symbol-cell" data-row="1" data-col="0">
-                            <span class="symbol" id="symbol-1-0">🎯</span>
+                            <span class="symbol" id="symbol-1-0">R$ 100,00</span>
                         </div>
                         <div class="symbol-cell" data-row="1" data-col="1">
-                            <span class="symbol" id="symbol-1-1">💰</span>
+                            <span class="symbol" id="symbol-1-1">R$ 150,00</span>
                         </div>
                         <div class="symbol-cell" data-row="1" data-col="2">
-                            <span class="symbol" id="symbol-1-2">🔥</span>
+                            <span class="symbol" id="symbol-1-2">R$ 75,00</span>
                         </div>
                         <div class="symbol-cell" data-row="2" data-col="0">
-                            <span class="symbol" id="symbol-2-0">⚡</span>
+                            <span class="symbol" id="symbol-2-0">R$ 50,00</span>
                         </div>
                         <div class="symbol-cell" data-row="2" data-col="1">
-                            <span class="symbol" id="symbol-2-1">🎲</span>
+                            <span class="symbol" id="symbol-2-1">R$ 25,00</span>
                         </div>
                         <div class="symbol-cell" data-row="2" data-col="2">
-                            <span class="symbol" id="symbol-2-2">🎊</span>
+                            <span class="symbol" id="symbol-2-2">R$ 10,00</span>
                         </div>
                     </div>
                 </div>
